CVS code -

nano-1.1.4 - 12/11/2001
- General
	- Preliminary syntax highlighting support.  New functions
	  colortoint() and parse_color() in rcfile.c, new code in 
	  edit_add() in winio.c to actually do the highlighting.  It's
	  not even close to pretty yet :P
	- Many int/long alignments (David Lawrence Ramsey).
- files.c:
	- Fixes for tab completion and screen refresh (David Lawrence
	  Ramsey).
  add_open_file()
	- Get rid of unsetting MARK_ISSET because otherwise writing
	  marked text will automatically unset the marker with
	  multibuffer enabled.
- global.c:
	- Define currshortcut and currslen when either DISABLE_MOUSE
	  or DISABLE_HELP or DISABLE_BROWSER is not defined (Silvan
	  Minghetti).
- nano.c:
  main()
	- Add Esc-[-[IGL] keys for FreeBSD Console (PgUp,PgDn,Insert).
        - Added better Hurd support for function keys (Alt-V,U,9,@,F).
  signal_init()
        - do SIG_IGN for the SIGTSTP sigaction regardless of whether
          we have _POSIX_VDISABLE or not (more Hurd fixes)
  help_init()
	- Typo fixes and additions to the new help texts.
  do_curpos()
	- Now takes arg for constant updating to always show the cursor
	  position (David Lawrence Ramsey).
  do_wrap()
	- Many fixes (David Lawrence Ramsey).
  do_spell() 
	- Dont prompt for replace if we don't change the word in
	  question (Rocco Corsi).
- po/de.po:
	- German translation updates (Karl Eichwalder).
- po/ru.po:
	- Russian translation updates (Sergey A. Ribalchenko).
- po/sv.po:
	- Swedish translation updates (Christian Rose).
- po/da.po:
	- Danish translation updates (Keld Simonse).
- po/es.po:
	- Spanish translation updates (Jordi).
- po/fr.po:
	- French translation updates (Michel Robitaille).
- m4/gettext.m4:
	- diff against mutt 1.2.5's gettext.m4.

nano-1.1.3 - 10/26/2001
- General
	- Finally wrote function-specific help mode.  Changes to
	  nano.c:help_init() and winio.c:do_help().  Changed
	  currshortcut and currslen #ifdefs to depend on both 