@@ -133,6 +133,7 @@ char *input_tab(char *buf, int place, int *lastWasTab, int *newplace, int *list)
 char *real_dir_from_tilde(char *buf);
 
 void shortcut_init(int unjustify);
+void signal_init(void);
 void lowercase(char *src);
 void blank_bottombars(void);
 void check_wrap(filestruct * inptr, char ch);
